# src/REST-entities/book/book.controller.ts
@@ -9,3 +9,22 @@ export const addBook = async (req: Request, res: Response) => {
   await user?.save();
   res.status(201).send({ newBook });
 };
+
+export const addReview = async (req: Request, res: Response) => {
+  const user = req.user;
+  const { bookId } = req.params;
+  const { rating, feedback } = req.body;
+  const book = await BookModel.findById(bookId);
+  if (!user?.books.includes(bookId) || !book) {
+    return res.status(400).send({ message: "Invalid 'bookId'" });
+  }
+  if (book.pagesFinished !== book.pagesTotal) {
+    return res
+      .status(403)
+      .send({ message: "You must finish this book before reviewing it" });
+  }
+  book.rating = rating;
+  book.feedback = feedback;
+  await book.save();
+  return res.status(200).send(book);
+};
