# src/REST-entities/book/book.router.ts
@@ -3,7 +3,7 @@ import Joi from "joi";
 import tryCatchWrapper from "../../helpers/function-helpers/try-catch-wrapper";
 import validate from "../../helpers/function-helpers/validate";
 import { authorize } from "./../../auth/auth.controller";
-import { addBook } from "./book.controller";
+import { addBook, addReview } from "./book.controller";
 
 const addBookSchema = Joi.object({
   title: Joi.string().required(),
@@ -23,6 +23,11 @@ const addBookSchema = Joi.object({
   pagesTotal: Joi.number().required().min(1).max(5000),
 });
 
+const addBookReviewSchema = Joi.object({
+  rating: Joi.number().min(0).max(5).required(),
+  feedback: Joi.string().min(1).max(3000).required(),
+});
+
 const router = Router();
 
 router.post(
@@ -30,6 +35,12 @@ router.post(
   validate(addBookSchema),
   tryCatchWrapper(authorize),
   tryCatchWrapper(addBook)
+);
+router.patch(
+  "/review/:bookId",
+  validate(addBookReviewSchema),
+  tryCatchWrapper(authorize),
+  tryCatchWrapper(addReview)
 );
 
 export default router;
